project/ansible/ingress-argo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: test.drintech.online
  tls:
  - hosts:
    - test.drintech.online
    secretName: argocd-server-tls

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-ingress
#   namespace: argocd
#   annotations:
#     alb.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: http
#     host: gitops.drintech.online

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argo-ingress
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: gitops.drintech.online  # Replace with your desired ArgoCD hostname
#     http:
#       paths:
#       - path: /test
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: https
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: gitops.drintech.online
#       http:
#         paths:
#           - path: /test443
#             pathType: Prefix
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   number: 443
#           - path: /test80
#             pathType: Prefix
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   number: 80
